// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account fees utility functions formatMethodFeesTooltip() displays base fee, when only promo discount without percentage or fixed 1`] = `
<div>
  <div
    class="wcpay-fees-tooltip"
  >
    <div>
      <div>
        Base fee
      </div>
      <div>
        9.84% + $3.65
      </div>
    </div>
    <div>
      <div>
        International payment method fee
      </div>
      <div>
        0.8%
      </div>
    </div>
    <div>
      <div>
        Currency conversion fee
      </div>
      <div>
        1%
      </div>
    </div>
    <div>
      <div>
        Total per transaction
      </div>
      <div
        class="wcpay-fees-tooltip__bold"
      >
        11.64% + $3.65
      </div>
    </div>
    <div
      class="wcpay-fees-tooltip__hint-text"
    >
      <span>
        <a
          class="components-external-link"
          href="https://woocommerce.com/document/woopayments/fees-and-debits/fees/#united-states"
          rel="external noreferrer noopener"
          target="_blank"
        >
          Learn more
          <span
            class="components-visually-hidden css-1mm2cvy-View e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="VisuallyHidden"
            style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
          >
            (opens in a new tab)
          </span>
          <svg
            aria-hidden="true"
            class="components-external-link__icon css-16iaek2-StyledIcon esh4a730"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.5 4.5h-7V6h4.44l-5.97 5.97 1.06 1.06L18 7.06v4.44h1.5v-7Zm-13 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-3H17v3a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h3V5.5h-3Z"
            />
          </svg>
        </a>
         about WooPayments Fees in your country
      </span>
    </div>
  </div>
</div>
`;

exports[`Account fees utility functions formatMethodFeesTooltip() displays base percentage and fixed fee - no custom fee nor discount 1`] = `
<div>
  <div
    class="wcpay-fees-tooltip"
  >
    <div>
      <div>
        Base fee
      </div>
      <div>
        12.3% + $4.57
      </div>
    </div>
    <div>
      <div>
        International payment method fee
      </div>
      <div>
        1%
      </div>
    </div>
    <div>
      <div>
        Currency conversion fee
      </div>
      <div>
        1%
      </div>
    </div>
    <div>
      <div>
        Total per transaction
      </div>
      <div
        class="wcpay-fees-tooltip__bold"
      >
        14.3% + $4.57
      </div>
    </div>
    <div
      class="wcpay-fees-tooltip__hint-text"
    >
      <span>
        <a
          class="components-external-link"
          href="https://woocommerce.com/document/woopayments/fees-and-debits/fees/#united-states"
          rel="external noreferrer noopener"
          target="_blank"
        >
          Learn more
          <span
            class="components-visually-hidden css-1mm2cvy-View e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="VisuallyHidden"
            style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
          >
            (opens in a new tab)
          </span>
          <svg
            aria-hidden="true"
            class="components-external-link__icon css-16iaek2-StyledIcon esh4a730"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.5 4.5h-7V6h4.44l-5.97 5.97 1.06 1.06L18 7.06v4.44h1.5v-7Zm-13 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-3H17v3a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h3V5.5h-3Z"
            />
          </svg>
        </a>
         about WooPayments Fees in your country
      </span>
    </div>
  </div>
</div>
`;
